chore: Remove PDFs and external repos - Keep only essential files
- Remove 6 PDF files (documentation available in /docs)
- Remove external repos: Obramax, weni-cli, weni-cli-https
- Update .gitignore to prevent future additions
- Keep: VS Code setup, documentation, guides, CSV

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,15 @@
 # Agent definitions with real credentials (use templates instead)
 # agent_definition.yaml
 
+# PDFs and binary files
+*.pdf
+*.PDF
+
+# External repositories (use links instead)
+Obramax/
+weni-cli/
+weni-cli-https/
+
 # Python
 __pycache__/
 *.py[cod]
